--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <div class="form-group">
                     <label for="type">거리</label>
                     <select id="type" name="type">
-                        <option value="deed">😊 선행했어요</option>
-                        <option value="help">💖 도움받았어요</option>
+                        <option value="deed">😊 2km</option>
+                        <option value="help">💖 5km</option>
                     </select>
                 </div>
                 <div class="form-group">
